@@ -514,3 +514,4 @@ in 0.1.13.
 
 0.1.38
 ------
+- allow detailed Q resolution kernel to work with q_offset.
